--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://xcitcvn.github.io/xclib/'
 languageCode = 'en-us'
 title = 'XomCode Library'
 theme = "hugo-book"
