--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 
 baseURL = 'https://xcitcvn.github.io/xclib/'
 languageCode = 'en-us'
-title = 'XomCode Library'
+title = 'Code Library'
 theme = "hugo-book"
 
 # Book configuration
@@ -21,24 +21,9 @@ enableGitInfo = true
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
 # And https://gohugo.io/content-management/multilingual/#translation-by-content-directory
-[languages]
-[languages.en]
-  languageName = 'English'
-  contentDir = 'content.en'
-  weight = 1
-
-[languages.ru]
-  languageName = 'Russian'
-  contentDir = 'content.ru'
-  weight = 2
-
-[languages.zh]
-  languageName = 'Chinese'
-  contentDir = 'content.zh'
-  weight = 3
 
 [menu]
-# [[menu.before]]
+[[menu.before]]
 [[menu.after]]
   name = "Github"
   url = "https://github.com/xcitcvn/xclib/"
@@ -81,7 +66,7 @@ enableGitInfo = true
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
   # Edit path must point to root directory of repo.
-  BookEditPath = 'edit/main/exampleSite'
+  # BookEditPath = 'edit/main/exampleSite'
 
   # Configure the date format used on the pages
   # - In git information
