deploy: 73a1db01bde57849749b90f15fdafc24f7685e92

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "XomCode Library",
-  "short_name": "XomCode Library",
+  "name": "Code Library",
+  "short_name": "Code Library",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
