--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-book"]
 	path = themes/hugo-book
 	url = https://github.com/alex-shpak/hugo-book.git
+[submodule "themes/fluency"]
+	path = themes/fluency
+	url = https://github.com/wayjam/hugo-theme-fluency.git
